css/custom-styles.css
/*I'm gonna add custom stuff in here. It's gonna melt your eyeballs*/


/* Typography
========================= */

.logo-text {
	text-decoration: none;
	font-family: helvetica, arial;
	font-size: 1em;
	font-weight: bold;
}

.navbar-text {
	font-size: 16px;
}
.footer-text {
	text-align: center;
}

/* Logos, etc.
========================= */




/* Region Map
========================= */

.africaMap {
	/*temporary mapbox*/
	border-style: solid;
	border-width: 1px;

}

#regionMap {
  		width: 500px;
  		height: 400px;
  		background-color: #ccc;
  	}


/* Jumbotron
========================= */
.jumbotron {
	padding-top: 100px;
}

/* Layout
========================= */
.footer-container {
	padding-top: 40px;
}

.regionColumns {
	padding-bottom: 5px;
}

.regionRow {
	padding-bottom: 40px;
}

@media (max-width: 767px) {
	.mainMapSVG	{
		padding-top: 30px;
	}
	.navbar {
		max-height: 60px;
		min-height: 30px;		
	}
	.navbar-text {
		font-size: 16px;
		margin-top: 20px;
		margin-bottom: 20px;
	}
	.jumbotron {
		padding-top: 50px;
	}
}

@media (min-width: 768px) and (max-width: 991px) {
	.mainMapSVG	{
		padding-top: 40px;
	}
	.jumbotron h1, 
	.jumbotron .h1 {
		font-size: 48px;
	}
}
@media (min-width: 992px) and (max-width: 1199) {
	
}
@media (min-width: 1200px) {
	.jumbotron h1 {
		font-size: 63px;
	}
}



/* SVG Maps
========================= */

#north_america:hover, 
#south_america:hover, 
#africa:hover, 
#asia:hover, 
#australia:hover, 
#europe:hover,
#AE:hover,
#AF:hover,
#AL:hover,
#AM:hover,
#AO:hover,
#AR:hover,
#AT:hover,
#AU:hover,
#AZ:hover,
#BF:hover,
#BG:hover,
#BI:hover,
#BJ:hover,
#BN:hover,
#BO:hover,
#BR:hover,
#BS:hover,
#BT:hover,
#BW:hover,
#BY:hover,
#BZ:hover,
#CA:hover,
#CD:hover,
#CF:hover,
#CG:hover,
#CH:hover,
#CI:hover,
#CL:hover,
#CM:hover,
#CN:hover,
#CO:hover,
#CR:hover,
#CU:hover,
#CY:hover,
#CZ:hover,
#DE:hover,
#DJ:hover,
#DK:hover,
#DO:hover,
#DZ:hover,
#EC:hover,
#EE:hover,
#EG:hover,
#EH:hover,
#ER:hover,
#ES:hover,
#ET:hover,
#FK:hover,
#FI:hover,
#FJ:hover,
#FR:hover,
#GA:hover,
#GB:hover,
#GE:hover,
#GF:hover,
#GH:hover,
#GL:hover,
#GM:hover,
#GN:hover,
#GQ:hover,
#GR:hover,
#GT:hover,
#GW:hover,
#GY:hover,
#HN:hover,
#HR:hover,
#HT:hover,
#HU:hover,
#ID:hover,
#IE:hover,
#IL:hover,
#IN:hover,
#IQ:hover,
#IR:hover,
#IS:hover,
#IT:hover,
#JM:hover,
#JO:hover,
#JP:hover,
#KE:hover,
#KG:hover,
#KH:hover,
#KP:hover,
#KR:hover,
#XK:hover,
#KW:hover,
#KZ:hover,
#LA:hover,
#LB:hover,
#LK:hover,
#LR:hover,
#LS:hover,
#LT:hover,
#LU:hover,
#LV:hover,
#LY:hover,
#MA:hover,
#MD:hover,
#ME:hover,
#MG:hover,
#MK:hover,
#ML:hover,
#MM:hover,
#MN:hover,
#MR:hover,
#MW:hover,
#MX:hover,
#MY:hover,
#MZ:hover,
#NA:hover,
#NC:hover,
#NE:hover,
#NG:hover,
#NI:hover,
#NL:hover,
#NO:hover,
#NP:hover,
#NZ:hover,
#OM:hover,
#PA:hover,
#PE:hover,
#PG:hover,
#PH:hover,
#PL:hover,
#PK:hover,
#PR:hover,
#PS:hover,
#PT:hover,
#PY:hover,
#QA:hover,
#RO:hover,
#RS:hover,
#RU:hover,
#RW:hover,
#SA:hover,
#SB:hover,
#SD:hover,
#SE:hover,
#SI:hover,
#SJ:hover,
#SK:hover,
#SL:hover,
#SN:hover,
#SO:hover,
#SR:hover,
#SS:hover,
#SV:hover,
#SY:hover,
#SZ:hover,
#TD:hover,
#TF:hover,
#TG:hover,
#TH:hover,
#TJ:hover,
#TL:hover,
#TM:hover,
#TN:hover,
#TR:hover,
#TT:hover,
#TW:hover,
#TZ:hover,
#UA:hover,
#UG:hover,
#US:hover,
#UY:hover,
#UZ:hover,
#VE:hover,
#VN:hover,
#VU:hover,
#YE:hover,
#ZA:hover,
#ZM:hover,
#ZW:hover {
	fill: #FFFDE7;
}

#north_america:active, 
#south_america:active, 
#africa:active, 
#asia:active, 
#australia:active, 
#europe:active
#AE:active,
#AF:active,
#AL:active,
#AM:active,
#AO:active,
#AR:active,
#AT:active,
#AU:active,
#AZ:active,
#BF:active,
#BG:active,
#BI:active,
#BJ:active,
#BN:active,
#BO:active,
#BR:active,
#BS:active,
#BT:active,
#BW:active,
#BY:active,
#BZ:active,
#CA:active,
#CD:active,
#CF:active,
#CG:active,
#CH:active,
#CI:active,
#CL:active,
#CM:active,
#CN:active,
#CO:active,
#CR:active,
#CU:active,
#CY:active,
#CZ:active,
#DE:active,
#DJ:active,
#DK:active,
#DO:active,
#DZ:active,
#EC:active,
#EE:active,
#EG:active,
#EH:active,
#ER:active,
#ES:active,
#ET:active,
#FK:active,
#FI:active,
#FJ:active,
#FR:active,
#GA:active,
#GB:active,
#GE:active,
#GF:active,
#GH:active,
#GL:active,
#GM:active,
#GN:active,
#GQ:active,
#GR:active,
#GT:active,
#GW:active,
#GY:active,
#HN:active,
#HR:active,
#HT:active,
#HU:active,
#ID:active,
#IE:active,
#IL:active,
#IN:active,
#IQ:active,
#IR:active,
#IS:active,
#IT:active,
#JM:active,
#JO:active,
#JP:active,
#KE:active,
#KG:active,
#KH:active,
#KP:active,
#KR:active,
#XK:active,
#KW:active,
#KZ:active,
#LA:active,
#LB:active,
#LK:active,
#LR:active,
#LS:active,
#LT:active,
#LU:active,
#LV:active,
#LY:active,
#MA:active,
#MD:active,
#ME:active,
#MG:active,
#MK:active,
#ML:active,
#MM:active,
#MN:active,
#MR:active,
#MW:active,
#MX:active,
#MY:active,
#MZ:active,
#NA:active,
#NC:active,
#NE:active,
#NG:active,
#NI:active,
#NL:active,
#NO:active,
#NP:active,
#NZ:active,
#OM:active,
#PA:active,
#PE:active,
#PG:active,
#PH:active,
#PL:active,
#PK:active,
#PR:active,
#PS:active,
#PT:active,
#PY:active,
#QA:active,
#RO:active,
#RS:active,
#RU:active,
#RW:active,
#SA:active,
#SB:active,
#SD:active,
#SE:active,
#SI:active,
#SJ:active,
#SK:active,
#SL:active,
#SN:active,
#SO:active,
#SR:active,
#SS:active,
#SV:active,
#SY:active,
#SZ:active,
#TD:active,
#TF:active,
#TG:active,
#TH:active,
#TJ:active,
#TL:active,
#TM:active,
#TN:active,
#TR:active,
#TT:active,
#TW:active,
#TZ:active,
#UA:active,
#UG:active,
#US:active,
#UY:active,
#UZ:active,
#VE:active,
#VN:active,
#VU:active,
#YE:active,
#ZA:active,
#ZM:active,
#ZW:active {
	fill: #C5E1A5;
}

